@@ -54,7 +54,8 @@ i18n_files = i18n/de \
 	i18n/nl \
 	i18n/no \
 	i18n/pt \
-	i18n/pt_BR
+	i18n/pt_BR \
+	i18n/ja
 
 dist_i18n_DATA = i18n/en \
 	$(i18n_files)
