@@ -446,6 +446,151 @@ $T2H_OBSOLETE_STRINGS->{'nl'} = {
                                 };
 
 
+$LANGUAGES->{'ja'} = {
+                       '  The buttons in the navigation panels have the following meaning:' => 'ナビゲーションパネル中のボタンには以下の意味があります。',
+                       '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '@strong{例}では、以下に示す構造を持つ文書の@strong{1.2.3項}を現在位置に仮定しています。',
+                       ' Up ' => '上',
+                       '%{acronym_like} (%{explanation})' => '',
+                       '%{month}, %{day} %{year}' => '%{year}年%{month}月%{day}日',
+                       '%{name} of %{class}' => '',
+                       '%{name} on %{class}' => '',
+                       '%{node_file_href}' => '',
+                       '%{node_file_href} @cite{%{book}}' => '',
+                       '%{node_file_href} section `%{section}\' in @cite{%{book}}' => '',
+                       '%{reference_name}' => '',
+                       '%{style} %{number}' => '',
+                       '%{style}: %{caption_first_line}' => '',
+                       '%{style}: %{shortcaption_first_line}' => '',
+                       '@b{%{quotation_arg}:} ' => '',
+                       '@cite{%{book}}' => '',
+                       'About' => '',
+                       'About (help)' => '',
+                       'About This Document' => 'この文書について',
+                       'April' => '4月',
+                       'August' => '8月',
+                       'Back' => '',
+                       'Beginning of this chapter or previous chapter' => '',
+                       'Button' => 'ボタン',
+                       'Contents' => '目次',
+                       'Cover (top) of document' => '',
+                       'Current Position' => '現在位置',
+                       'Current section' => '',
+                       'December' => '12月',
+                       'FastBack' => '',
+                       'FastForward' => '',
+                       'February' => '2月',
+                       'First' => '',
+                       'First section in reading order' => '',
+                       'Following' => '',
+                       'Following node' => '',
+                       'Footnotes' => '脚注',
+                       'Forward' => '',
+                       'From 1.2.3 go to' => '1.2.3項からの移動先',
+                       'Go to' => '移動先',
+                       'Index' => '見出し',
+                       'Index Entry' => '見出し一覧',
+                       'January' => '1月',
+                       'July' => '7月',
+                       'Jump to' => '移動',
+                       'June' => '6月',
+                       'Last' => '',
+                       'Last section in reading order' => '',
+                       'March' => '3月',
+                       'May' => '5月',
+                       'Menu:' => 'メニュー',
+                       'Name' => '名称',
+                       'Next' => '次',
+                       'Next chapter' => '',
+                       'Next node' => '',
+                       'Next section in reading order' => '',
+                       'Next section on same level' => '',
+                       'Node following in node reading order' => '',
+                       'Node up' => '',
+                       'NodeNext' => '',
+                       'NodePrev' => '',
+                       'NodeUp' => '',
+                       'November' => '11月',
+                       'October' => '10月',
+                       'Overview' => '概要',
+                       'Overview:' => '概要:',
+                       'Prev' => '前',
+                       'Previous node' => '',
+                       'Previous section in reading order' => '',
+                       'Previous section on same level' => '',
+                       'Section' => '項',
+                       'Section One' => '第1項',
+                       'See %{node_file_href}' => '',
+                       'See %{node_file_href} @cite{%{book}}' => '',
+                       'See %{node_file_href} section `%{section}\' in @cite{%{book}}' => '',
+                       'See %{reference_name}' => '',
+                       'See @cite{%{book}}' => '',
+                       'See section %{reference_name}' => '',
+                       'See section `%{section}\' in @cite{%{book}}' => '',
+                       'September' => '9月',
+                       'Short Table of Contents' => '簡略化した目次',
+                       'Short table of contents' => '',
+                       'Subsection One-Four' => '第1.4項',
+                       'Subsection One-One' => '第1.1項',
+                       'Subsection One-Three' => '第1.3項',
+                       'Subsection One-Two' => '第1.2項',
+                       'Subsubsection One-Two-Four' => '第1.2.4項',
+                       'Subsubsection One-Two-One' => '第1.2.1項',
+                       'Subsubsection One-Two-Three' => '第1.2.3項',
+                       'Subsubsection One-Two-Two' => '第1.2.2項',
+                       'T2H_today' => '%s, %d %d',
+                       'Table of Contents' => '目次',
+                       'Table of contents' => '',
+                       'The node you are looking for is at %{href}.' => '',
+                       'This' => '',
+                       'This document was generated by @emph{%{user}} on @emph{%{date}} using @uref{%{program_homepage}, @emph{%{program}}}.' => 'この文書は@emph{%{user}}によって@emph{%{date}}に@uref{%{program_homepage}, @emph{%{program}}}を用いて生成されました。',
+                       'This document was generated by @emph{%{user}} using @uref{%{program_homepage}, @emph{%{program}}}.' => 'この文書は@emph{%{user}}によって@uref{%{program_homepage}, @emph{%{program}}}を用いて生成されました。',
+                       'This document was generated on @i{%{date}} using @uref{%{program_homepage}, @i{%{program}}}.' => 'この文書は@emph{%{date}}に@uref{%{program_homepage}, @emph{%{program}}}を用いて生成されました。',
+                       'This document was generated using @uref{%{program_homepage}, @emph{%{program}}}.' => 'この文書は@uref{%{program_homepage}, @emph{%{program}}}を用いて生成されました。',
+                       'Top' => '冒頭',
+                       'Untitled Document' => '無題の文書',
+                       'Up' => '',
+                       'Up node' => '',
+                       'Up section' => '',
+                       'by @emph{%{user}}' => '@emph{%{user}}',
+                       'by @emph{%{user}} on @emph{%{date}}' => '@emph{%{user}}, @emph{%{date}',
+                       'current' => '現在位置',
+                       'on @emph{%{date}}' => '@emph{%{date}}',
+                       'section `%{section}\' in @cite{%{book}}' => '@cite{%{book}}の `%{section}\' ',
+                       'see %{node_file_href}' => '%{node_file_href}参照',
+                       'see %{node_file_href} @cite{%{book}}' => '%{node_file_href} @cite{%{book}}参照',
+                       'see %{node_file_href} section `%{section}\' in @cite{%{book}}' => '',
+                       'see %{reference_name}' => '',
+                       'see @cite{%{book}}' => '',
+                       'see section %{reference_name}' => '',
+                       'see section `%{section}\' in @cite{%{book}}' => '',
+                       'unknown' => '不明'
+                     };
+
+$T2H_OBSOLETE_STRINGS->{'ja'} = {
+                                  'about (help)' => '使用法 (ヘルプ)',
+                                  'beginning of this chapter or previous chapter' => 'この章または前の章の冒頭',
+                                  'cover (top) of document' => '文書の表紙 (トップ)',
+                                  'current section' => '現在の節',
+                                  'first section in reading order' => '文書順で前の項',
+                                  'following node' => '次の節',
+                                  'index' => '見出し',
+                                  'last section in reading order' => '文書順で最後の項',
+                                  'next chapter' => '次の章',
+                                  'next node' => '次の節',
+                                  'next section in reading order' => '文書順で次の項',
+                                  'next section on same level' => '同じ階層にある次の項',
+                                  'node following in node reading order' => '文書順で次の節',
+                                  'node up' => '上の節へ',
+                                  'previous node' => '前の節',
+                                  'previous section in reading order' => '文書順で前の節',
+                                  'previous section on same level' => '同じ階層にある前の項',
+                                  'short table of contents' => '簡略化した目次',
+                                  'table of contents' => '文書の目次',
+                                  'up node' => '上の節',
+                                  'up section' => '上の項'
+                                };
+
+
 $LANGUAGES->{'pt'} = {
                        '  The buttons in the navigation panels have the following meaning:' => '  Os bot@~oes nos pain@\'eis de navega@,{c}@~ao possuem os seguintes significados:',
                        '  where the @strong{ Example } assumes that the current position is at @strong{ Subsubsection One-Two-Three } of a document of the following structure:' => '  onde o @strong{ Exemplo } assume que a posi@,{c}@~ao atual localiza-se em @strong{ Subsub@,{c}@~ao Um-Dois-Tr@^es } de um documento com a seguinte estrutura:',
